# ai-playbook

./: README.md
scripts/: init-from-template.sh
templates/full-stack-template/: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  STACK.md  TEMPLATE_USAGE.md  docker-compose.yml
templates/full-stack-template/.github/workflows/: ci.yml
templates/full-stack-template/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
templates/full-stack-template/backend/alembic/: env.py
templates/full-stack-template/backend/src/: __init__.py
templates/full-stack-template/backend/src/api/: app.py
templates/full-stack-template/backend/src/api/graphql/: schema.py  types.py
templates/full-stack-template/backend/src/config/: settings.py
templates/full-stack-template/backend/src/db/: __init__.py  base.py  models.py  session.py
templates/full-stack-template/backend/tests/: conftest.py  test_models.py  test_smoke.py
templates/full-stack-template/docs/sprints/examples/: README.md  sprint-01_example-backend-only.md  sprint-02_example-fullstack.md
templates/full-stack-template/frontend/: .gitignore  README.md  codegen.yml  package.json
templates/full-stack-template/frontend/src/app/: layout.tsx  page.tsx
templates/full-stack-template/frontend/src/app/tenants/: page.tsx
templates/full-stack-template/frontend/src/lib/: apollo-wrapper.tsx
